# iudebug

./: .gitignore  CMakeLists.txt  LICENSE  README.md
source/: App.cpp  App.hpp  AppState.cpp  AppState.hpp  BaseDefs.h  DebugEngine.hpp  DebugEngineGdb.cpp  DebugEngineGdb.hpp  Enum.hpp  EventBus.c  EventBus.h  ImGuiFileBrowser.h  IniReader.h  LibDwarf.h  LibElf32.c  LibElf32.h  LibElf64.c  LibElf64.h  Process.c  main.cpp
src/: DebugEngineGdb.cpp  ImGuiTextEditor.cpp  ImGuiTextEditor.h  LibElf64.c  LibElfCommon.h  LibGdbConn.c  LibGdbConn.h  Optional.hpp  Process.h  imgui_impl_opengl3.cpp  main.cpp
src/IuDebug/: EventBus.h  IniReader.cpp  LibElfCommon.c  main.cpp
src/imgui/: ImGuiFileBrowser.cpp  imgui_draw.cpp
src/iudebug/: AppState.cpp  AppState.hpp  DebugEngine.cpp  DebugEngine.hpp  LibDwarf.c  LibElf64.h  main.cpp
